@@ -2,6 +2,7 @@ PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 05 Oct 2000, Version 4.0.3
+- Add FTP module to default Win32 build (Andi)
 - Fixed crash in the POSIX getrlimit() function (alex@zend.com)
 - Fixed dirname() under certain conditions (Andi)
 - Add --with-imap-ssl to support SSL'ized imap library in RH7 and others
